syntax = "proto3";

option go_package = "github.com/ShristiRnr/NHIT_Backend/api/pb/authpb";

import "google/api/annotations.proto";

// ====================
// Auth / User Registration & Verification
// ====================

enum UserRole {
  USER_ROLE_UNSPECIFIED = 0;
  SUPER_ADMIN = 1;
  ADMIN = 2;
}

enum SSOProvider {
  SSO_PROVIDER_UNSPECIFIED = 0;
  GOOGLE = 1;
  MICROSOFT = 2;
  OKTA = 3;
  KEYCLOAK = 4;
  CUSTOM_OIDC = 5;
}

// Registration
message RegisterUserRequest {
  string tenant_id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  repeated UserRole roles = 5;
}

message RegisterUserResponse {
  string user_id = 1;
  string name = 2;
  string email = 3;
  repeated UserRole roles = 4;
  repeated string permissions = 5;
}

// Email Verification
message VerifyEmailRequest {
  string user_id = 1;
  string verification_token = 2; // Token sent via email
}

message VerifyEmailResponse {
  bool success = 1;
}

// Password Reset (forgot/reset)
message ForgotPasswordRequest {
  string email = 1;
}

message ForgotPasswordResponse {
  bool success = 1;
}

message ResetPasswordByTokenRequest {
  string token = 1;
  string new_password = 2;
}

message ResetPasswordByTokenResponse {
  bool success = 1;
}

// Login / Logout
message UserLoginRequest {
  string login = 1;       // email or username
  string password = 2;
  string tenant_id = 3;
  string org_id = 4;
}

message UserLoginResponse {
  string token = 1;            // JWT
  string refresh_token = 2;
  string user_id = 3;
  string email = 4;
  string name = 5;
  repeated UserRole roles = 6;
  repeated string permissions = 7;
  string last_login_at = 8;
  string last_login_ip = 9;
  string tenant_id = 10;
  string org_id = 11;
  int64 token_expires_at = 12;
  int64 refresh_expires_at = 13;
}

message UserLogoutRequest {
  string user_id = 1;
  string refresh_token = 2;
}

message UserLogoutResponse {
  bool success = 1;
}

message RefreshTokenRequest {
  string refresh_token = 1;
  string tenant_id = 2;
  string org_id = 3;
}

message RefreshTokenResponse {
  string token = 1;
  string refresh_token = 2;
  int64 token_expires_at = 3;
  int64 refresh_expires_at = 4;
}

message InitiateSSORequest {
  string tenant_id = 1;
  string org_id = 2;
  SSOProvider provider = 3;
  string redirect_uri = 4;
  string state = 5;
}

message InitiateSSOResponse {
  string auth_url = 1;
  string state = 2;
}

message CompleteSSORequest {
  string tenant_id = 1;
  string org_id = 2;
  SSOProvider provider = 3;
  string code = 4;
  string state = 5;
  string redirect_uri = 6;
}

message InitiateSSOLogoutRequest {
  string tenant_id = 1;
  string org_id = 2;
  SSOProvider provider = 3;
  string id_token_hint = 4;
  string post_logout_redirect_uri = 5;
  string state = 6;
}

message InitiateSSOLogoutResponse {
  string logout_url = 1;
  string state = 2;
}

message CompleteSSOLogoutRequest {
  string tenant_id = 1;
  string org_id = 2;
  SSOProvider provider = 3;
  string state = 4;
}

message SendVerificationEmailRequest {
  string user_id = 1;
}

message SendVerificationEmailResponse {
  bool success = 1;
}

message SendPasswordResetEmailRequest {
  string email = 1;
}

message SendPasswordResetEmailResponse {
  bool success = 1;
}

// ====================
// Extend AuthService in gRPC
// ====================
service AuthService {
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/register"
      body: "*"
    };
  }
  rpc VerifyEmail(VerifyEmailRequest) returns (VerifyEmailResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/verify-email"
      body: "*"
    };
  }
  rpc ForgotPassword(ForgotPasswordRequest) returns (ForgotPasswordResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/forgot-password"
      body: "*"
    };
  }
  rpc ResetPasswordByToken(ResetPasswordByTokenRequest) returns (ResetPasswordByTokenResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/reset-password"
      body: "*"
    };
  }
  rpc Login(UserLoginRequest) returns (UserLoginResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/login"
      body: "*"
    };
  }
  rpc Logout(UserLogoutRequest) returns (UserLogoutResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/logout"
      body: "*"
    };
  }
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/refresh"
      body: "*"
    };
  }
  rpc InitiateSSO(InitiateSSORequest) returns (InitiateSSOResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/sso/initiate"
      body: "*"
    };
  }
  rpc CompleteSSO(CompleteSSORequest) returns (UserLoginResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/sso/complete"
      body: "*"
    };
  }
  rpc InitiateSSOLogout(InitiateSSOLogoutRequest) returns (InitiateSSOLogoutResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/sso/logout/initiate"
      body: "*"
    };
  }
  rpc CompleteSSOLogout(CompleteSSOLogoutRequest) returns (UserLogoutResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/sso/logout/complete"
      body: "*"
    };
  }
  rpc SendVerificationEmail(SendVerificationEmailRequest) returns (SendVerificationEmailResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/send-verification"
      body: "*"
    };
  }
  rpc SendPasswordResetEmail(SendPasswordResetEmailRequest) returns (SendPasswordResetEmailResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/send-reset-email"
      body: "*"
    };
  }
}
